# wildlife-drone-maneuver

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  run_pipeline.sh
clip_library/: __init__.py  add_pose_labels.py  build_dataset_card.py  compare_flights.py  extract_clips.py  io_paths.py  make_qa_overlays.py  maneuver_decision_tree.md  maneuver_labels.py  pose_backtrack.py  pose_gt.py  scan_sessions.py  schema.py  select_clips.py
