[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wildlife-drone-maneuver"
version = "1.2.0"
description = "Replayable, labeled testbed for evaluating self-adaptive wildlife-drone flight policies (decision-tree replay harness)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jenna Kline", email = "kline.377@osu.edu" }]
keywords = ["imageomics", "drone", "UAV", "ecology", "self-adaptive", "benchmark", "KABR"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]
# Core harness (Mode A) — CPU-only, no deep-learning framework.
dependencies = [
    "pandas>=2.0",
    "numpy>=1.23",
]

[project.optional-dependencies]
# Parquet catalog I/O (io_paths prefers Parquet when available).
parquet = ["pyarrow>=12.0"]
# Mode B dataset-rebuild pipeline (raw-video extraction / QA overlays).
pipeline = ["opencv-python-headless>=4.7", "pyarrow>=12.0"]

[project.urls]
Homepage = "https://github.com/Imageomics/wildlife-drone-maneuver"
Dataset = "https://huggingface.co/datasets/imageomics/drone-maneuver-clips"
Demo = "https://huggingface.co/spaces/imageomics/drone-maneuver-demo"

[tool.setuptools]
# Only the harness package is installed; the decision-tree spec ships with it.
packages = ["clip_library"]

[tool.setuptools.package-data]
clip_library = ["maneuver_decision_tree.md"]
